# asteroid-arena

./: .gitignore  CMakeLists.txt  README.md
libs/include/GL/: freeglut_ext.h  freeglut_std.h
src/: main.cpp
src/A1/: CONFIG.h  GAMECONFIG.h  GameState.h  global.h  main.cpp
src/A1/entities/: ArenaEntity.h  AsteroidEntity.h  BulletEntity.h  MediatorEntity.h  ScoreManagerEntity.h  ShipEntity.h  TestEntity.h  arenaEntity.h  exampleEntity.h  shipEntity.h
src/A1/scripts/: AsteroidScript.cpp  AsteroidScript.h  AsteroidWaveScript.cpp  AsteroidWaveScript.h  MediatorScript.cpp  MediatorScript.h  PlayerControllerScript.cpp  PlayerControllerScript.h  ScoreScript.cpp  ScoreScript.h  WallProxmityScript.cpp  WallProxmityScript.h  WallScript.cpp  WallScript.h  randmove.cpp  randmove.h
src/A2/: GAMECONFIG.h  GameState.h  main.cpp  readme.txt
src/A2/data/: ship.mtl
src/A2/data/model/: outerStation.mtl
src/A2/entities/: ArenaEntity.h  AsteroidEntity.h  BulletEntity.h  CameraEntity.h  CubeEntity.h  MediatorEntity.h  PlayerEntity.h  ScoreManagerEntity.h  ShipEntity.h  StationEntity.h
src/A2/scripts/: ArenaDestroy.cpp  ArenaDestroy.h  ArenaScript.cpp  ArenaScript.h  AsteroidScript.cpp  AsteroidScript.h  AsteroidWaveScript.cpp  AsteroidWaveScript.h  CameraControlScript.cpp  CameraControlScript.h  DelayDestroy.cpp  DelayDestroy.h  MediatorScript.cpp  PlayerControllerScript.cpp  PlayerControllerScript.h  ScoreScript.cpp  TestScript.cpp  TestScript.h  WallScript.cpp  WallScript.h
src/core/: ENGINECONFIG.h  Engine.cpp  Engine.h  Game.cpp  Game.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h
src/core/audio/: AudioPlayer.h
src/core/ecs/: Component.cpp  Component.h  ComponentType.h  Entity.cpp  Entity.h  System.h
src/core/ecs/components/: CameraComponent.cpp  CameraComponent.h  ColliderComponent.cpp  ColliderComponent.h  ColliderComponent2D.cpp  ColliderComponent2D.h  ColliderComponent3D.cpp  ColliderComponent3D.h  MeshComponent.cpp  MeshComponent.h  ParticleEmitterComponent.cpp  ParticleEmitterComponent.h  RigidbodyComponent.cpp  RigidbodyComponent.h  ScriptComponent.cpp  ScriptComponent.h  TextComponent.cpp  TextComponent.h
src/core/ecs/enums/: ComponentType.h  EntityTag.h
src/core/ecs/systems/: CollisionSystem.cpp  CollisionSystem.h  CollisionSystem2D.cpp  CollisionSystem2D.h  CollisionSystem3D.cpp  CollisionSystem3D.h  MeshRendererSystem.cpp  MeshRendererSystem.h  ParticleSystem.cpp  ParticleSystem.h  ScriptProcessorSystem.cpp  ScriptProcessorSystem.h  TextRendererSystem.cpp  TextRendererSystem.h
src/core/input/: InputRegistry.cpp  InputRegistry.h  KeyRegistry.cpp  KeyRegistry.h
src/core/shared/: engine_graphic.h  engine_math.h
src/labs/: main.cpp
submission/: README.txt  i3d64dbg.ilk
submission/vs/: i3d.vcxproj  i3d.vcxproj.filters
